# ableton-plugin

./: .gitignore  CHANGELOG.md  CMakeLists.txt  PLAN.md  README.md
.github/ISSUE_TEMPLATE/: release_validation.md
.github/workflows/: ci.yml
Resources/Factory Presets/: Acid House 303 Line.natevstpreset  Acid Jack House Acid Pluck Ping.natevstpreset  Acid Jack House Darkroom Sub.natevstpreset  Acid Jack House Dub Acid Wash.natevstpreset  Acid Jack House Filter Panic Lead.natevstpreset  Acid Jack House Jack Track Bass.natevstpreset  Acid Jack House Late Acid Arp.natevstpreset  Acid Jack House Mono Chord Jab.natevstpreset  Acid Jack House Noise Drop Tool.natevstpreset  Acid Jack House Pressure Reese.natevstpreset  Acid Jack House Rave Alarm Hit.natevstpreset  Acid Jack House Reso Chord Stab.natevstpreset  Acid Jack House Rubber Acid Bass.natevstpreset  Acid Jack House Short Organ Snap.natevstpreset  Acid Jack House Silver Box Line.natevstpreset  Acid Jack House Smoke Room Pad.natevstpreset  Acid Jack House Warehouse Bell Tick.natevstpreset  Acid Minimal Squiggle.natevstpreset  Afro House Call Response Lead.natevstpreset  Afro House Deep Drum Bass.natevstpreset  Afro House Dry Wood Hit.natevstpreset  Afro House Dub Space Wash.natevstpreset  Afro House Dusty Kalimba.natevstpreset  Afro House Festival Top Hook.natevstpreset  Afro House Kora Glass Bell.natevstpreset  Afro House Low Chant Reese.natevstpreset  Afro House Marimba Skank.natevstpreset  Afro House Moonrise Arp.natevstpreset  Afro House Perc Bell.natevstpreset  Afro House Percussive FM Tick.natevstpreset  Afro House Ritual Chord Stab.natevstpreset  Afro House Sunrise Marimba Pluck.natevstpreset  Afro House Tension Pad.natevstpreset  Afro House Tribal Low Pluck.natevstpreset  Afro House Warm Organ Skank.natevstpreset  Afro House Wide Ancestral Keys.natevstpreset  Afro Melodic House Pluck.natevstpreset  Afro Tech Perc Bass.natevstpreset  Amapiano Airy Chord Chop.natevstpreset  Amapiano Deep Log Roller.natevstpreset  (+526 more)
Source/: Parameters.cpp  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Effects/: EffectsRack.cpp  EffectsRack.h
Source/Modulation/: LfoShapes.h  ModulationRouting.h
Source/Randomization/: Randomizer.cpp  Randomizer.h
Source/Sampler/: SamplePlayer.cpp  SamplePlayer.h
Source/Sequencer/: PatternSequencer.cpp  PatternSequencer.h
Source/Synth/: Distortion.cpp  Distortion.h  Envelope.cpp  Envelope.h  Filter.cpp  Filter.h  Oscillator.cpp  Oscillator.h  SynthEngine.cpp  SynthEngine.h  Voice.cpp  Voice.h  WavetableFrameIO.cpp  WavetableFrameIO.h  WavetableFrameRecipes.cpp  WavetableFrameRecipes.h  WavetableModel.cpp  WavetableModel.h
Source/UI/: ClubMonitorDisplay.cpp  ClubMonitorDisplay.h  ControlStatusStrip.cpp  ControlStatusStrip.h  FilterResponseDisplay.cpp  FilterResponseDisplay.h  FocusOverlayPanel.cpp  FocusOverlayPanel.h  FxPerformanceControls.cpp  FxPerformanceControls.h  FxRackOrderControls.cpp  FxRackOrderControls.h  FxRackPanelLayout.cpp  FxRackPanelLayout.h  FxRackRow.cpp  FxRackRow.h  HomeOverviewDisplay.cpp  HomeOverviewDisplay.h  HomeSessionDisplay.cpp  HomeSessionDisplay.h  HomeSignalFlowDisplay.cpp  HomeSignalFlowDisplay.h  HomeSoundStage.cpp  HomeSoundStage.h  HostSyncStatusLabel.cpp  HostSyncStatusLabel.h  HouseLayerRackDisplay.cpp  HouseLayerRackDisplay.h  LfoCurveLibrary.cpp  LfoCurveLibrary.h  LfoCurveToolStrip.cpp  LfoCurveToolStrip.h  LibraryPanelLayout.cpp  LibraryPanelLayout.h  LookAndFeel.cpp  LookAndFeel.h  LowEndAssistant.cpp  LowEndAssistant.h  MacroAssignmentActions.cpp  MacroAssignmentActions.h  (+130 more)
Tests/: DriveBassSafetyAudit.cpp  EditorLayoutAudit.cpp  EffectsSendAudit.cpp  FactoryPresetLibraryAudit.cpp  FactoryPresetRenderAudit.cpp  GlobalEditHistoryAudit.cpp  GuardDynamicsAudit.cpp  GuardTelemetryAudit.cpp  HeldNoteStabilityAudit.cpp  HomeSoundStageAudit.cpp  KeyboardSpamCpuAudit.cpp  ModulationRouteShapeAudit.cpp  ModulationSourceParityAudit.cpp  NoiseSourceAudit.cpp  OscillatorCrossModAudit.cpp  OscillatorLaneOverviewAudit.cpp  PresetPreviewAudit.cpp  PresetSaveAudit.cpp  ProcessorPerformanceAudit.cpp  PumpTelemetryAudit.cpp  RandomCandidateAudit.cpp  RandomCandidateExplorerAudit.cpp  SampleRecorderAudit.cpp  SampleWaveformDisplayAudit.cpp  SamplerChopAudit.cpp  SequencerHousePatternAudit.cpp  SequencerPatternSceneAudit.cpp  SequencerRatchetAudit.cpp  SourceCharacterAudit.cpp  SpectrumSnapshotAudit.cpp  StereoFieldTelemetryAudit.cpp  ThemeAudit.cpp  WavetableDisplayAudit.cpp  WavetableFrameIOAudit.cpp  WavetableFrameRecipeAudit.cpp  WavetableFrameStripAudit.cpp  WavetableModelAudit.cpp
docs/: ABLETON_RELEASE_VALIDATION.md  COMPETITOR_GAP_ANALYSIS.md  DEEP_PROGRAM_RESEARCH_ADD_LIST_2026_06_28.md  DEEP_RESEARCH_BACKLOG.md  FACTORY_PRESETS.md  HOUSE_PLUGIN_DEEP_FEATURE_AUDIT_2026_06_28.md  HOUSE_VST_COMPETITOR_RESEARCH_2026_06_29.md  MASTER_FEATURE_BACKLOG_RESEARCH_2026_06_28.md  MODULATION_WORKFLOW.md  NEXT_FEATURE_RESEARCH.md  PROGRAM_RESEARCH_GAP_LIST.md  RANDOMIZATION_LIBRARY_RESEARCH_2026_06_28.md  RANDOMIZATION_WORKFLOW.md  SAMPLE_RECORDER_WORKFLOW_RESEARCH.md  UI_EFFECTS_ROADMAP.md  UK_GARAGE_WORKFLOW.md
tools/: fetch_pluginval.sh  generate_ableton_validation_report.sh  generate_factory_presets.py  install_vst3.sh  package_release.sh  validate_release.sh
